--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WMTStore"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.cart.CheckoutActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
